--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <!-- Container para os cards de produtos -->
   <div class="produtos-container">
     <!-- Card de produto -->
-    <div class="card-produto" data-category="comida" data-details="Hambúrguer artesanal com carne bovina 180g, queijo cheddar, alface, tomate e molho especial. Perfeito para uma refeição rápida e deliciosa." data-variations='[{"type": "checkbox", "name": "Ingredientes Extras", "options": ["Carne Extra (+R$5)", "Bacon (+R$3)", "Queijo Extra (+R$2)"]}, {"type": "checkbox", "name": "Remover Ingredientes", "options": ["Sem Tomate", "Sem Alface", "Sem Molho"]}]'>
+    <div class="card-produto" data-category="comida" data-details="Hambúrguer artesanal com carne bovina 180g, queijo cheddar, alface, tomate e molho especial. Perfeito para uma refeição rápida e deliciosa." data-variations='[{"type": "checkbox", "name": "Ingredientes Extras", "options": ["Carne Extra (+R$5)", "Bacon (+R$3)", "Queijo Extra (+R$2)"]}, {"type": "checkbox", "name": "Remover Ingredientes", "options": ["Sem Tomate", "Sem Alface", "Sem Molho"]}, {"type": "select", "name": "Quantidade", "options": ["1", "2", "3", "4", "5"]}]'>
       <img src="img/IMG-20251006-WA0000.jpg" alt="hambúrguer" data-imagem="img/IMG-20251006-WA0000.jpg">
       <h3>Hambúrguer</h3>
       <p class="preco">R$15,90</p>
@@ -113,7 +113,7 @@
     </div>
 
     <!-- Card de produto -->
-    <div class="card-produto" data-category="comida" data-details="Taco mexicano autêntico com carne moída temperada, queijo ralado, alface fresca e molho picante. Uma opção leve e saborosa." data-variations='[{"type": "checkbox", "name": "Ingredientes Extras", "options": ["Queijo Extra (+R$2)", "Molho Picante (+R$1)"]}, {"type": "checkbox", "name": "Remover Ingredientes", "options": ["Sem Alface", "Sem Molho"]}]'>
+    <div class="card-produto" data-category="comida" data-details="Taco mexicano autêntico com carne moída temperada, queijo ralado, alface fresca e molho picante. Uma opção leve e saborosa." data-variations='[{"type": "checkbox", "name": "Ingredientes Extras", "options": ["Queijo Extra (+R$2)", "Molho Picante (+R$1)"]}, {"type": "checkbox", "name": "Remover Ingredientes", "options": ["Sem Alface", "Sem Molho"]}, {"type": "select", "name": "Quantidade", "options": ["1", "2", "3", "4", "5"]}]'>
       <img src="img/IMG-20251006-WA0002.jpg" alt="Taco" data-imagem="img/IMG-20251006-WA0002.jpg">
       <h3>Taco</h3>
       <p class="preco">R$12,50</p>
@@ -122,14 +122,14 @@
     </div>
 
     <!-- Card de produto -->
-    <div class="card-produto" data-category="bebida" data-details="Refrigerante Coca-Cola 350ml, gelado e refrescante. Ideal para acompanhar suas refeições." data-variations='[{"type": "checkbox", "name": "Tipo", "options": ["Normal", "Zero"]}]'>
+    <div class="card-produto" data-category="bebida" data-details="Refrigerante Coca-Cola, gelado e refrescante. Ideal para acompanhar suas refeições." data-variations='[{"type": "checkbox", "name": "Tamanho", "options": ["350ml", "600ml (+R$2)", "1L (+R$4)"]}, {"type": "checkbox", "name": "Tipo", "options": ["Normal", "Zero"]}, {"type": "select", "name": "Quantidade", "options": ["1", "2", "3", "4", "5"]}]'>
       <img src="img/IMG-20251006-WA0001.jpg" alt="Refri" data-imagem="img/IMG-20251006-WA0001.jpg">
       <h3>Coca Cola</h3>
       <p class="preco">R$5</p>
       <button class="btn-comprar" data-nome="Coca Cola" data-preco="5" data-imagem="img/IMG-20251006-WA0001.jpg">Comprar</button>
     </div>
     <!-- Card de produto -->
-<div class="card-produto" data-category="bebida" data-details="Café expresso fresco, preparado com grãos selecionados. Uma bebida energética para começar o dia.">
+<div class="card-produto" data-category="bebida" data-details="Café expresso fresco, preparado com grãos selecionados. Uma bebida energética para começar o dia." data-variations='[{"type": "select", "name": "Quantidade", "options": ["1", "2", "3", "4", "5"]}]'>
       <img src="img/IMG-20251006-WA0003.jpg" alt="Café" data-imagem="img/IMG-20251006-WA0003.jpg">
       <h3>Café</h3>
       <p class="preco">R$4,00</p>
